@@ -1,13 +1,13 @@
 #define RUBY_VERSION "1.9.2"
-#define RUBY_PATCHLEVEL 29
+#define RUBY_PATCHLEVEL 30
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 9
 #define RUBY_VERSION_TEENY 1
 
 #define RUBY_RELEASE_YEAR 2010
-#define RUBY_RELEASE_MONTH 10
-#define RUBY_RELEASE_DAY 23
-#define RUBY_RELEASE_DATE "2010-10-23"
+#define RUBY_RELEASE_MONTH 11
+#define RUBY_RELEASE_DAY 1
+#define RUBY_RELEASE_DATE "2010-11-01"
 
 #include "ruby/version.h"
 
