@@ -1,3 +1,8 @@
+Sat Sep  4 23:48:47 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* file.c (rb_file_s_readlink): symlink target should be in
+	  filesystem encoding.
+
 Wed Sep  1 14:33:36 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* enum.c (enum_zip): fix typo of rdoc.
